# 15618-DOMP

./: CMakeLists.txt  Makefile  README.md  benchmarkGHC.sh  benchmarkLatedays.sh  benchmarkLatedaysArraySum.sh  benchmarkLatedaysLogistic.sh  parseResult.sh  submitJob.py
lib/: CommandManager.cpp  CommandManager.h  DataManager.cpp  DataManager.h  MPIServer.cpp  MPIServer.h  Makefile  domp.c  domp.cpp  domp.h
lib/util/: CycleTimer.h  DoublyLinkedList.cpp  DoublyLinkedList.h  SplitList.cpp  SplitList.h  linkedlist.cpp  linkedlist.h
tests/: arraySum.cpp  main.cpp  testDataTransfer.cpp
tests/kmeans/: Makefile  benchmark-1.sh  benchmark-2.sh  benchmark.sh  benchmarkLocal.sh  cuda_kmeans.cu  cuda_kmeans_new.cu  cuda_main.cu  cuda_main_new.cu  file_io.cpp  kmeans.h  omp_kmeans.c  omp_main_basic  seq_kmeans.cpp  seq_main  seq_main.cpp
tests/logistic_regression/: createArray.py  logisticRegression.cpp  logisticRegression.h  logisticRegressionSeq.cpp
tests/matrix_mul/: Makefile  README
tests/matrix_mul/omp/: Makefile  matrix_mul.cpp
tests/matrix_mul/sequential/: Makefile
